Fix for CSS on iphone

--- a/source/stylesheets/site.css.scss
+++ b/source/stylesheets/site.css.scss
@@ -463,7 +463,7 @@ article {
 
 // iTunes affiliate banners
 #ibb-widget {
-  margin: 0 auto 3em;
+  margin: 0 auto 6em;
   max-width: 728px;
   width: 100%;
   @media screen and (max-width: 500px) {
